Improvements: - Added smart page detection to stop when no more data - Added tracking of previous page count - Added checks for empty and incomplete pages - Updated config with standardized wait times - Optimized data loading for tickers with fewer pages

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,7 +4,13 @@ scraper:
   timeout: 60     # Overall operation timeout
   retries: 3      # Number of retry attempts
   delay: 1        # Delay between operations
-  maxPages: 2     # Maximum pages to scrape
+  maxPages: 20     # Maximum pages to scrape
+  waits:
+    betweenTickers: 1    # Between processing tickers
+    afterError: 1        # After any error
+    afterRefresh: 1      # After browser refresh
+    tableLoad: 1         # Wait for table to load
+    browserClose: 1      # Wait during browser close
   browser:
     headless: false
     debug: true
